# rlisp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
src/: cons.h  eval.cpp  eval.h  main.cpp  mempool.h  parser.cpp  parser.h  vcpkgparser.h
src/fwd/: parser.h
test/: evaltests.cpp  parsertests.cpp  testutil.h
